# sqlparser-rs-sgx

./: .gitignore  Cargo.toml  Makefile
app/: Cargo.toml  Enclave_u.c  Enclave_u.h
app/src/: main.rs
app/src/tokens/: mod.rs
enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile  Xargo.toml
enclave/src/: lib.rs
enclave/src/dialect/: ansi.rs  keywords.rs  mod.rs
